--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-TOKEN=bot tokem
-MONGO_URI=url
+TOKEN=MTEzNTEzNjA3NTMwNDY2NTA4OA.G-DOC2.wmhYgxfct10vzSxhVYnF9uDq_oMY-X-NTQDcN4
+MONGO_URI=mongodb+srv://takeri:takeri2303@kizuna.wyjts4s.mongodb.net/
